# equinox-backend

./: .gitignore  Dockerfile  clear_cache.py  dependencies.py  main.py  pyproject.toml  requirements.txt  seed_indian_stocks.py  test_logic.py  test_timeseries.py  test_yahoo.py  vercel.json
config/: keys.py  settings.py
database/: connection.py
models/: ai.py  user.py
routes/: ai.py  auth.py  email_alerts.py  market.py  onboarding.py  paper.py  watchlist.py
services/: ai_agent.py  email.py  pinger.py  recommendations.py  security.py
