[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "dnspython>=2.8.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "groq>=0.37.1",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
    "uvicorn>=0.51.0",
    "yfinance>=1.5.1",
]
